--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -547,6 +547,14 @@
     "message": "Cerca appunti",
     "description": "Search clipboard"
   },
+  "commandLabelSearchTextSelectionInNewTab": {
+    "message": "Cerca la selezione del testo in una nuova scheda",
+    "description": "Search text selection in new tab"
+  },
+  "commandLabelSearchClipboardInNewTab": {
+    "message": "Cerca gli appunti in una nuova scheda",
+    "description": "Search clipboard in new tab"
+  },
   "commandLabelCloseRightTabs": {
     "message": "Chiude le schede a destra",
     "description": "Close right tabs"
@@ -659,6 +667,10 @@
     "message": "Motori di ricerca [Popup]",
     "description": "[Popup] Search engines"
   },
+  "commandLabelPopupCustomCommandList": {
+    "message": "[Popup] Elenco comandi personalizzato",
+    "description": "[Popup] Custom command list"
+  },
   "commandLabelSendMessageToOtherAddon": {
     "message": "Invia messaggio ad altri add-on",
     "description": "Send message to other add-on"
@@ -670,6 +682,10 @@
   "commandLabelClearBrowsingData": {
     "message": "Cancella dati di navigazione",
     "description": "Clear browsing data"
+  },
+  "commandLabelRunMultiPurposeCommand": {
+    "message": "Esegue un comando multiuso",
+    "description": "Run multi purpose command"
   },
   "commandDescriptionToggleBookmark": {
     "message": "Aggiunge o rimuove un segnalibro.",
@@ -856,12 +872,20 @@
     "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
-    "message": "Inizia una ricerca sul web del testo selezionato.",
-    "description": "Starts a web search of the selected text."
+    "message": "Avvia una ricerca web del testo selezionato nella scheda corrente.",
+    "description": "Starts a web search of the selected text in the current tab."
   },
   "commandDescriptionSearchClipboard": {
-    "message": "Inizia una ricerca sul web del testo degli appunti.",
-    "description": "Starts a web search of the clipboard text."
+    "message": "Avvia una ricerca web del testo degli appunti nella scheda corrente.",
+    "description": "Starts a web search of the clipboard text in the current tab."
+  },
+  "commandDescriptionSearchTextSelectionInNewTab": {
+    "message": "Avvia una ricerca web del testo selezionato in una nuova scheda.",
+    "description": "Starts a web search of the selected text in a new tab."
+  },
+  "commandDescriptionSearchClipboardInNewTab": {
+    "message": "Avvia una ricerca web del testo degli appunti in una nuova scheda.",
+    "description": "Starts a web search of the clipboard text in a new tab."
   },
   "commandDescriptionCloseRightTabs": {
     "message": "Chiude tutte le schede sul lato destro della scheda corrente.",
@@ -975,6 +999,10 @@
     "message": "Apre una popup contenente la lista dei motori di ricerca installati e offre la possibilità di fare una ricerca del testo selezionato con uno di questi.",
     "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
   },
+  "commandDescriptionPopupCustomCommandList": {
+    "message": "Apre un popup contenente un elenco personalizzato di comandi multipli e offre la possibilità di eseguirne uno.",
+    "description": "Opens a popup containing a custom list of multiple commands and offers the possibility to run one of them."
+  },
   "commandDescriptionSendMessageToOtherAddon": {
     "message": "Invia un messaggio personalizzato ad un altro componente aggiuntivo. Questo consente l'utilizzo di altre funzionalità di componenti aggiuntivi.",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
@@ -986,6 +1014,10 @@
   "commandDescriptionClearBrowsingData": {
     "message": "Rimuove i dati di navigazione specificati.",
     "description": "Removes the specified browsing data."
+  },
+  "commandDescriptionRunMultiPurposeCommand": {
+    "message": "Esegue una sequenza personalizzata di comandi uno alla volta fino a quando non si ha successo.",
+    "description": "Runs a custom sequence of commands one by one until one succeeds."
   },
   "commandSettingLabelNewTabPosition": {
     "message": "Nuova posizione scheda",
@@ -1163,6 +1195,10 @@
     "message": "Modello di corrispondenza personalizzato",
     "description": "Custom match pattern"
   },
+  "commandSettingLabelCommandSelection": {
+    "message": "Selezione dei comandi",
+    "description": "Command selection"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "Cache",
     "description": "Cache"
@@ -1308,8 +1344,12 @@
     "description": "The frame in which the user script should be injected."
   },
   "commandSettingDescriptionCustomMatchPattern": {
-    "message": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used.",
+    "message": "Un modello nella forma di un'espressione regolare per abbinare una parte specifica di una stringa. Se omesso sarà usato un modello interno.",
     "description": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used."
+  },
+  "commandSettingDescriptionCommandSelection": {
+    "message": "Una selezione personalizzata di comandi multipli.",
+    "description": "A custom selection of multiple commands."
   },
   "commandErrorNotificationTitle": {
     "message": "\"$COMMAND$\" comando non eseguito.",
@@ -1352,6 +1392,22 @@
   "commandBarAdditionalSettingsText": {
     "message": "Questo comando ha impostazioni aggiuntive.",
     "description": "This command has additional settings."
+  },
+  "commandBarOpenSelectionText": {
+    "message": "Apri selezione comandi.",
+    "description": "Open command selection."
+  },
+  "commandBarOpenSettingsText": {
+    "message": "Apri le impostazioni del comando.",
+    "description": "Open command settings."
+  },
+  "commandMultiSelectAddPlaceholder": {
+    "message": "Aggiungere",
+    "description": "Add"
+  },
+  "commandMultiSelectNoResultsPlaceholder": {
+    "message": "Nessun risultato",
+    "description": "No results"
   },
   "gesturePopupTitleNewGesture": {
     "message": "Nuovo Gesto",
