--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -284,7 +284,7 @@
     "description": "Information:"
   },
   "exclusionsTextInformation": {
-    "message": "添加网址（URL）匹配模式以在特定网站禁用 Gesturefy。在匹配模式中可以使用 \"*\" 通配符，格式必须为 <协议>://<域名><地址>。",
+    "message": "添加网址（URL）匹配模式以在特定网站禁用 Gesturefy。在匹配模式中可以使用 \"*\" 通配符，格式必须为 <协议>://<域名><路径>。",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
   "exclusionsPlaceholderURL": {
@@ -547,6 +547,14 @@
     "message": "搜索剪贴板",
     "description": "Search clipboard"
   },
+  "commandLabelSearchTextSelectionInNewTab": {
+    "message": "Search text selection in new tab",
+    "description": "Search text selection in new tab"
+  },
+  "commandLabelSearchClipboardInNewTab": {
+    "message": "Search clipboard in new tab",
+    "description": "Search clipboard in new tab"
+  },
   "commandLabelCloseRightTabs": {
     "message": "关闭右侧标签页",
     "description": "Close right tabs"
@@ -659,6 +667,10 @@
     "message": "[弹出菜单] 搜索引擎",
     "description": "[Popup] Search engines"
   },
+  "commandLabelPopupCustomCommandList": {
+    "message": "[Popup] Custom command list",
+    "description": "[Popup] Custom command list"
+  },
   "commandLabelSendMessageToOtherAddon": {
     "message": "发送消息到其他附加组件",
     "description": "Send message to other add-on"
@@ -670,6 +682,10 @@
   "commandLabelClearBrowsingData": {
     "message": "清理浏览数据",
     "description": "Clear browsing data"
+  },
+  "commandLabelRunMultiPurposeCommand": {
+    "message": "运行多个命令",
+    "description": "Run multi purpose command"
   },
   "commandDescriptionToggleBookmark": {
     "message": "添加或移除一个书签。",
@@ -856,12 +872,20 @@
     "description": "Opens either a selected url or the link on which the gesture started in a new private window."
   },
   "commandDescriptionSearchTextSelection": {
-    "message": "网络搜索选中文本",
-    "description": "Starts a web search of the selected text."
+    "message": "Starts a web search of the selected text in the current tab.",
+    "description": "Starts a web search of the selected text in the current tab."
   },
   "commandDescriptionSearchClipboard": {
-    "message": "网络搜索剪贴板中的文本",
-    "description": "Starts a web search of the clipboard text."
+    "message": "Starts a web search of the clipboard text in the current tab.",
+    "description": "Starts a web search of the clipboard text in the current tab."
+  },
+  "commandDescriptionSearchTextSelectionInNewTab": {
+    "message": "Starts a web search of the selected text in a new tab.",
+    "description": "Starts a web search of the selected text in a new tab."
+  },
+  "commandDescriptionSearchClipboardInNewTab": {
+    "message": "Starts a web search of the clipboard text in a new tab.",
+    "description": "Starts a web search of the clipboard text in a new tab."
   },
   "commandDescriptionCloseRightTabs": {
     "message": "关闭当前标签页右侧的所有标签页。",
@@ -975,6 +999,10 @@
     "message": "打开一个弹出式菜单，其中包含已安装搜索引擎的列表，您可以用其中一个搜索引擎搜索选中文本。",
     "description": "Opens a popup containing a list of all installed search engines and offers the possibility to search the selected text with one of them."
   },
+  "commandDescriptionPopupCustomCommandList": {
+    "message": "Opens a popup containing a custom list of multiple commands and offers the possibility to run one of them.",
+    "description": "Opens a popup containing a custom list of multiple commands and offers the possibility to run one of them."
+  },
   "commandDescriptionSendMessageToOtherAddon": {
     "message": "向另一个附加组件发送一个自定义消息。这可以调用其他附加组件的功能。",
     "description": "Sends a custom message to another add-on. This allows the use of other add-ons functionality."
@@ -986,6 +1014,10 @@
   "commandDescriptionClearBrowsingData": {
     "message": "删除指定的浏览数据",
     "description": "Removes the specified browsing data."
+  },
+  "commandDescriptionRunMultiPurposeCommand": {
+    "message": "逐个运行一个自定义命令序列中的命令，直到有一个成功。",
+    "description": "Runs a custom sequence of commands one by one until one succeeds."
   },
   "commandSettingLabelNewTabPosition": {
     "message": "新建标签页的位置",
@@ -1163,6 +1195,10 @@
     "message": "自定义匹配模式",
     "description": "Custom match pattern"
   },
+  "commandSettingLabelCommandSelection": {
+    "message": "选择命令",
+    "description": "Command selection"
+  },
   "commandSettingLabelBrowsingDataCache": {
     "message": "缓存",
     "description": "Cache"
@@ -1311,6 +1347,10 @@
     "message": "正则表达式形式的匹配模式用于匹配字符串中的特定部分。如果省略，则会使用内置的匹配模式。",
     "description": "A pattern in the form of a regular expression to match a specific part of a string. If omitted an internal pattern is used."
   },
+  "commandSettingDescriptionCommandSelection": {
+    "message": "自定义选择多个命令。",
+    "description": "A custom selection of multiple commands."
+  },
   "commandErrorNotificationTitle": {
     "message": "“$COMMAND$”命令失败。",
     "description": "\"New tab\" command failed.",
@@ -1352,6 +1392,22 @@
   "commandBarAdditionalSettingsText": {
     "message": "此命令有额外的设置项。",
     "description": "This command has additional settings."
+  },
+  "commandBarOpenSelectionText": {
+    "message": "打开命令选择。",
+    "description": "Open command selection."
+  },
+  "commandBarOpenSettingsText": {
+    "message": "打开命令设置。",
+    "description": "Open command settings."
+  },
+  "commandMultiSelectAddPlaceholder": {
+    "message": "添加",
+    "description": "Add"
+  },
+  "commandMultiSelectNoResultsPlaceholder": {
+    "message": "无结果",
+    "description": "No results"
   },
   "gesturePopupTitleNewGesture": {
     "message": "新建手势",
